# coursework_3

./: README.md  main.py  pyproject.toml
src/: operation.py  utils.py
tests/: conftest.py  test_operation.py  test_utils.py
